--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
         <form id="todo-form">
           <div>
             <legend>To-Do List</legend>
-            <input id="todo-input" type="text" placeholder="Enter your task" />
-            <button type="submit">Add</button>
+            <div class="input-button-container">
+              <input
+                id="todo-input"
+                type="text"
+                placeholder="Enter your task"
+              />
+              <button type="submit">Add</button>
+            </div>
           </div>
         </form>
         <ul id="todo-list"></ul>
