--- a/index.html
+++ b/index.html
@@ -7,23 +7,17 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="main-container">
-      <div class="container">
-        <form id="todo-form">
-          <div>
-            <legend>To-Do List</legend>
-            <div class="input-button-container">
-              <input
-                id="todo-input"
-                type="text"
-                placeholder="Enter your task"
-              />
-              <button type="submit">Add</button>
-            </div>
+    <div class="container">
+      <form id="todo-form">
+        <div>
+          <legend>To-Do List</legend>
+          <div class="input-button-container">
+            <input id="todo-input" type="text" placeholder="Enter your task" />
+            <button type="submit">Add</button>
           </div>
-        </form>
-        <ul id="todo-list"></ul>
-      </div>
+        </div>
+      </form>
+      <ul id="todo-list"></ul>
     </div>
 
     <script src="./script.js"></script>
