--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <legend>To-Do List</legend>
           <div class="input-button-container">
             <input id="todo-input" type="text" placeholder="Enter your task" />
-            <button type="submit">Add</button>
+            <button class="primaryBtn" type="submit">Add</button>
           </div>
         </div>
       </form>
