--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       <ul id="todo-list"></ul>
     </div>
 
+    <div class="div-footer">
+      <footer class="footer">
+        <p>
+          &#169; Copyright
+          <a class="a-footer" href="https://github.com/Carlosaac23"> Carlos Acosta </a>
+        </p>
+      </footer>
+    </div>
+
     <script src="./script.js"></script>
   </body>
 </html>
