Added a change in html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <footer class="footer">
         <p>
           &#169; Copyright
-          <a class="a-footer" href="https://github.com/Carlosaac23"> Carlos Acosta </a>
+          <a class="a-footer" target="_blank" href="https://github.com/Carlosaac23"> Carlos Acosta </a>
         </p>
       </footer>
     </div>
