Changed input animation

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       <form id="todo-form">
         <div>
           <legend>To-Do List</legend>
-          <div class="input-button-container">
-            <input id="todo-input" type="text" placeholder="Enter your task" />
+          <div class="input-field">
+            <input id="todo-input" type="text" required spellcheck="false" />
+            <label>Enter your task</label>
             <button class="addBtn" type="submit">Add</button>
           </div>
         </div>
