Title-Responsive Improved

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <form id="todo-form">
         <div>
-          <legend>To-Do List</legend>
+          <legend class="title">To-Do List</legend>
           <div class="input-field">
             <input id="todo-input" type="text" required spellcheck="false" />
             <label>Enter your task</label>
